# GBO-Knowledge-Transfer

./: .gitignore  LICENSE  README.md  requirements.txt
docs/_static/css/: custom.css
docs/source/: conf.py  glossary.rst  index.rst
docs/source/getting_started/: email.rst  housing.rst  index.rst  nrao_tools.rst  payroll.rst  physical_access.rst  sdd_tools.rst
docs/source/python_packages/: index.rst
docs/source/python_packages/pyqt_guis/: index.rst
docs/source/python_packages/sphinx_docs/: autobuilds.rst  diagrams.rst  docstrings.rst  extensions.rst  index.rst
docs/source/setup/: index.rst
docs/source/setup/ci/: github_actions.rst  index.rst  jenkins.rst
docs/source/setup/remote_access/: fastx.rst  index.rst  vnc.rst  xfreerdp.rst
docs/source/setup/secrets/: index.rst
docs/source/setup/simulator/: 1_CreateSparrowEnv.rst  2_SetUpMCRepos.rst  3_UnitTests.rst  4_CreateTelescope.rst  index.rst
src/AstrID-skeleton/: README.md  pyproject.toml  requirements.txt
src/AstrID-skeleton/src/astrid/: __init__.py  __main__.py
src/AstrID-skeleton/src/astrid/config/: config.py
src/AstrID-skeleton/src/astrid/gui/: app.py
src/AstrID-skeleton/src/astrid/gui/editor/: AutoCompleter.py  FileManager.py  PyEditor.py  PyLexer.py  SearchItem.py  SearchWorker.py  __init__.py  main.py
src/AstrID-skeleton/src/astrid/gui/gfm/: CodeEditor.py  Continuum.py  DataDisplay.py  Focus.py  GBTStatus.py  ObservationManagement.py  ObservationStatus.py  Pointing.py  SpectralLine.py  __init__.py
src/AstrID-skeleton/src/astrid/gui/gfm/oof/: OOFPanel.py
src/AstrID-skeleton/src/astrid/gui/menu/: Edit.py  File.py  Help.py  Tools.py  View.py  __init__.py
src/AstrID-skeleton/src/astrid/gui/static/: __init__.py
src/AstrID-skeleton/src/astrid/gui/static/css/: styles.qss
src/AstrID-skeleton/src/astrid/gui/widgets/: AvailableSchedulingBlocks.py  GBTState.py  GBTStatus.py  ObservationControl.py  ObservationState.py  Observer.py  Operator.py  OutputList.py  Project.py  QueueControl.py  RunQueue.py  Session.py  SessionHistory.py  StarMap.py  ValidationOutput.py  __init__.py
src/AstrID-skeleton/src/astrid/gui/windows/: AstridMainWindow.py  ModeSelectWindow.py  VerifyCloseWindow.py  __init__.py
src/AstrID-skeleton/src/astrid/shell/: __init__.py  messages.py  parser.py  shell.py
src/AstrID-skeleton/src/astrid/util/: gateway.py
src/PyQt-examples/: 1_basic_window.py  MAT.py  get_styles.py  main.py  scratch.py  simulations.py  widget_showcase.py  widgets.py
src/PyQt-examples/static/scss/: styles.scss
src/PyQt-examples/static/styles/: palette.py
src/PyQt-examples/styles/: colors.css  fonts.css  main.css  styles.scss
